# Basic-RTSA

./: .gitignore  CMakeLists.txt  ImportGtest.cmake  ImportOgg.cmake  ImportOpus.cmake  ImportOpusfile.cmake  README(media_data).md  README(server_sdk).md  README.md  README_en.md  build_linux.sh  download_test_data.sh  start.sh
RTSA/: README(server_sdk).md  README.md  README.zh.md  build_android.sh
RTSA-Lite/: README.md  README.zh.md  cross_compile.zh.md
RTSA-Lite/agora_sdk/include/: agora_rtc_api.h
RTSA-Lite/example/: CMakeLists.txt  build.sh  hello_rtsa.c  license.cfg  license_activator.c  license_query.c  toolchain.cmake
RTSA/src/include/: agora_media_transporter.h
RTSA/src/rtc/: video_encoded_image_receiver.cpp  video_frame_observer.h
RTSA/src/samples/rtsa/: audio_test.cpp
RTSA/src/utils/: I420_buffer.cpp  bitbuffer.cpp  bitbuffer.h  common_utils.cpp  opt_parser.cpp  wav_header.cpp  wav_header.h
RTSA/src/utils/file_parser/: fixed_frame_length_audio_file_parser.cpp  fixed_frame_length_audio_file_parser.h  h264_file_parser.h  media_file_parser.h  ogg_opus_file_parser.cpp  video_file_parser_factory.cpp  wav_pcm_file_parser.cpp  wav_pcm_file_parser.h
RTSA/src/wrapper/: audio_frame_handler_factory.cpp  audio_frame_observer.h  audio_frame_sender.cpp  audio_frame_sender.h  audio_pcm_frame_handler.cpp  connection_wrapper.h  local_user_wrapper.h  media_packet_receiver.cpp  media_packet_sender.h
RTSA/src/wrapper_wrapper/: media_data_sender.cpp
android/jni/: Android.mk  Application.mk
src/AgoraSDKQuickstartDl/: main.cpp
src/AgoraServerSdkDemoApp/: main.cpp
src/demo_main/: main.cpp  server_sdk_demo.cpp
src/dynamic_load_demo_main/: main.cpp
src/include/: agora_media_transporter.h
src/rtc/: video_encoded_image_receiver.h  video_frame_observer.cpp  video_frame_receiver.cpp  video_frame_receiver.h
src/samples/: CMakeLists.txt
src/samples/rtc/: audio_test.cpp  video_test.cpp
src/samples/rtsa/: data_stream_test.cpp  video_test.cpp
src/test/: CMakeLists.txt  main.cpp
src/test/rtc/: audio_test.cpp  rtc_audio_test.cpp
src/test/rtsa/: audio_test.cpp  video_test.cpp
src/utils/: I420_buffer.h  aligned_alloc.cpp  aligned_alloc.h  auto_reset_event.cpp  auto_reset_event.h  log.h  opt_parser.cpp  opt_parser.h  wav_pcm_file_writer.cpp  wav_pcm_file_writer.h
src/utils/file_parser/: aac_file_parser.cpp  aac_file_parser.h  audio_file_parser_factory.cpp  audio_file_parser_factory.h  fixed_frame_length_audio_file_parser.cpp  h264_file_parser.cpp  h264_file_parser.h  ogg_opus_file_parser.cpp  ogg_opus_file_parser.h  video_file_parser_factory.h  yuv_file_parser.cpp  yuv_file_parser.h
src/wrapper/: audio_frame_handler_factory.h  audio_frame_observer.cpp  audio_frame_observer.h  audio_frame_sender.cpp  audio_frame_sender.h  audio_pcm_frame_handler.h  audio_pcm_puller.cpp  audio_pcm_puller.h  connection_wrapper.cpp  connection_wrapper.h  local_user_wrapper.cpp  local_user_wrapper.h  media_packet_receiver.cpp  media_packet_receiver.h  media_packet_sender.cpp  media_packet_sender.h  statistic_dump.cpp  statistic_dump.h  utils.cpp  utils.h  video_encoded_frame_receiver.cpp  video_encoded_frame_receiver.h  video_frame_sender.cpp  video_frame_sender.h  video_frame_sender_internal.h
src/wrapper_wrapper/: agora_media_transporter.cpp  media_data_receiver.cpp  media_data_receiver.h  media_data_sender.cpp  media_data_sender.h  media_send_task.cpp  media_send_task.h
